--- a/docs/10_domains/40_synthetic_chemistry.mdx
+++ b/docs/10_domains/40_synthetic_chemistry.mdx
@@ -36,7 +36,7 @@ Chemotion is especially suitable for synthetic chemistry as it originally starte
 
 ## Publishing Data
 
-[Publishing research data](/docs/data_publication/) is important in order to allow for the reuse of data by other researchers or for machine learning. Especially for machine learning, it is crucial that the data is published in a structured and standardised way. Where can you publish your data? Open access [data repositories](/docs/repositories/) are a good solution to provide your data for reuse by others. Choosing the right repository is crucial and as a general rule of thumb it is better to deposit your data in data-specific or discipline-specific repositories as these enforce more standardisation in how the data are published thus allowing for better machine-readability.
+[Publishing research data](/docs/data_publishing/) is important in order to allow for the reuse of data by other researchers or for machine learning. Especially for machine learning, it is crucial that the data is published in a structured and standardised way. Where can you publish your data? Open access [data repositories](/docs/repositories/) are a good solution to provide your data for reuse by others. Choosing the right repository is crucial and as a general rule of thumb it is better to deposit your data in data-specific or discipline-specific repositories as these enforce more standardisation in how the data are published thus allowing for better machine-readability.
 
 In order to reach as many researchers as possible, choosing the right repository can be crucial (more on this in the [article on choosing the right repository](/docs/choose_repository/)).
 
