--- a/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
+++ b/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
@@ -6,7 +6,7 @@ slug: "/publishing_standards_publishers"
 ### Recommendations for trusted, chemistry-friendly repositories
 
 :::tip Standard
-*Journals should recommend trusted, chemistry-friendly research data repositories.*
+_Journals should recommend trusted, chemistry-friendly research data repositories._
 :::
 
 To assist authors in selecting **well-established and community-specific [repositories](/docs/repositories/)** for their research data, [trusted chemistry friendly repositories](/docs/choose_repository/) should be recommended by journals. These should be included within the author guidelines or the data policies.
@@ -14,15 +14,15 @@ To assist authors in selecting **well-established and community-specific [reposi
 ### Recommendations to include data availability statements
 
 :::tip Standard
-*Journals should recommend that authors provide a data availability statement. Author guidelines should also provide templates for illustration.*
+_Journals should recommend that authors provide a data availability statement. Author guidelines should also provide templates for illustration._
 :::
 
-[Templates](/docs/data_availability_statement/#templates-for-data-availability-statements) for [**data availability statements**](/docs/data_availability_statement) or a similarly termed section should be made available to authors in the journal's author guidelines. This guides authors in correctly submitting underlying data with their manuscript and effectively communicating how to find and access the data by including the DOI or other PID, enabling the FAIR principles (e.g. [A1](docs/fair#a1-metadata-are-retrievable-by-their-identifier-using-a-standardized-communications-protocol), [I3](/docs/fair#i3-metadata-include-qualified-references-to-other-metadata)). It should also be mentioned whether the templates are selectable and the information should be provided via the manuscript submission system or whether this information should be manually inserted into the initially submitted manuscript by the authors.
+[Templates](/docs/data_availability_statement/#templates-for-data-availability-statements) for [**data availability statements**](/docs/data_availability_statement) or a similarly termed section should be made available to authors in the journal's author guidelines. This guides authors in correctly submitting underlying data with their manuscript and effectively communicating how to find and access the data by including the DOI or other PID, enabling the FAIR principles (e.g. [A1](/docs/fair#a1-metadata-are-retrievable-by-their-identifier-using-a-standardized-communications-protocol), [I3](/docs/fair#i3-metadata-include-qualified-references-to-other-metadata)). It should also be mentioned whether the templates are selectable and the information should be provided via the manuscript submission system or whether this information should be manually inserted into the initially submitted manuscript by the authors.
 
-### Data availability statements and manuscript submission systems 
+### Data availability statements and manuscript submission systems
 
 :::tip Standard
-*Journals should add a data availability statement to published articles and collect the necessary information through their submission systems.*
+_Journals should add a data availability statement to published articles and collect the necessary information through their submission systems._
 :::
 
 [Templates](/docs/data_availability_statement/#templates-for-data-availability-statements) for [**data availability statements**](/docs/data_availability_statement) or a similarly termed section should also be added to the manuscript submission system. Once a template has been selected by the submitter, the data availability statement should be editable to allow authors to add additional information, such as what data are included in the dataset, similar to what is currently often mentioned in the section on supporting information PDF files. The submission system should then require the submitter to provide the necessary information, such as the DOI (specified as [DOI name](https://www.doi.org/doi-handbook/HTML/doi-name-syntax2.html) e.g. `10.1000/182` or as a URL i.e. including a resolver e.g. `https://doi.org/10.1000/182` ), repository name, third party name and contact information (in case of third-party data ownership), or reasons for restricted access and information on how to access a dataset, depending on the template used.
@@ -30,23 +30,22 @@ To assist authors in selecting **well-established and community-specific [reposi
 ### Link datasets to articles in Crossref DOI metadata
 
 :::tip Standard
-*Journals should use the information available in data availability statements to enhance Crossref DOI metadata by linking articles to datasets.*
+_Journals should use the information available in data availability statements to enhance Crossref DOI metadata by linking articles to datasets._
 :::
 
-With the DOI and repository name in hand, journals should enrich Crossref DOI metadata of articles published following the [FAIR](/docs/fair/) principles (e.g [F2](/docs/fair/#f2-data-are-described-with-rich-metadata-defined-by-r1-below), [I3](/docs/fair/#i3-metadata-include-qualified-references-to-other-metadata)). This establishes a structured **link** between the DOI of the article and the  DOI of the dataset and ensures humans and machines alike can interpret the relationship between the published objects. Without defining a relation in the Crossref metadata, only humans can effectively interpret this connection through the data availability statement, effectively resulting in a missing link between the the reported results in the article and the underlying research data. For Crossref metadata, a `related_item` should be added to mention the name of the repository (equal to `publisher` in the corresponding dataset DataCite DOI metadata). 
-
-<!--image clarifiyng why this is important-->
+With the DOI and repository name in hand, journals should enrich Crossref DOI metadata of articles published following the [FAIR](/docs/fair/) principles (e.g [F2](/docs/fair/#f2-data-are-described-with-rich-metadata-defined-by-r1-below), [I3](/docs/fair/#i3-metadata-include-qualified-references-to-other-metadata)). This establishes a structured **link** between the DOI of the article and the DOI of the dataset and ensures humans and machines alike can interpret the relationship between the published objects. Without defining a relation in the Crossref metadata, only humans can effectively interpret this connection through the data availability statement, effectively resulting in a missing link between the the reported results in the article and the underlying research data. For Crossref metadata, a `related_item` should be added to mention the name of the repository (equal to `publisher` in the corresponding dataset DataCite DOI metadata).
 
 In agreement with [Crossref's documentation on **linking datasets** to published items](https://www.crossref.org/documentation/schema-library/markup-guide-metadata-segments/relationships/), the relationship type `isSupplementedBy` should be used.
 
 In XML:
+
 ```xml
 <rel:program name="relations">
 	<rel:related_item>
 		<rel:description>
-		Dataset in <<<repository name>>>.		
+		Dataset in <<<repository name>>>.
 		</rel:description>
-		<rel:inter_work_relation relationship-type="isSupplementedBy" 
+		<rel:inter_work_relation relationship-type="isSupplementedBy"
 identifier-type="doi">10.prefix/suffix
 		</rel:inter_work_relation>
 	</rel:related_item>
@@ -56,38 +55,39 @@ identifier-type="doi">10.prefix/suffix
 ### Add data publications to prior publication policy
 
 :::tip Standard
-*Journal author guidelines should explicitly encourage pre-submission of datasets.*
+_Journal author guidelines should explicitly encourage pre-submission of datasets._
 :::
 
 Similar to the publication of preprints, journal author guidelines should allow for the pre-submission of datasets, as this is also already the case for many journals for crystallographic data published in CSD with CCDC. Datasets published prior to manuscript submission facilitate manuscript submission workflows as DOIs of datasets are registered. DOIs can therefore be validated and datasets can be included in the review process.
 
 :::danger Danger
-A disadvantage of pre-submission is that researchers cannot link the dataset to the manuscript, as the manuscript has not yet been published and no DOI has been registered. The metadata of the dataset must then be manually updated by the authors after the article has been published. Datasets with status *under review* are one way to overcome this disadvantage (see below).
+A disadvantage of pre-submission is that researchers cannot link the dataset to the manuscript, as the manuscript has not yet been published and no DOI has been registered. The metadata of the dataset must then be manually updated by the authors after the article has been published. Datasets with status _under review_ are one way to overcome this disadvantage (see below).
 :::
 
 ### Recommendations to include research data in the review process
 
 :::tip Standard
-*Journal author guidelines should explicitly encourage research data to be included in the review process.*
+_Journal author guidelines should explicitly encourage research data to be included in the review process._
 :::
 
-Some repositories have an *under review* status alongside the *draft* and *published* statuses. A dataset *under review* is not editable and not yet published, i.e. it does not have a DOI registered. Therefore, the DOI cannot be validated. Nonetheless, the dataset has an internally reserved DOI and is accessible via a URL to provide access to editors and reviewers. This allows research data to be included in the review process. The URL to access the dataset should be requested by the submission system so that it can be forwarded to editors and reviewers.
+Some repositories have an _under review_ status alongside the _draft_ and _published_ statuses. A dataset _under review_ is not editable and not yet published, i.e. it does not have a DOI registered. Therefore, the DOI cannot be validated. Nonetheless, the dataset has an internally reserved DOI and is accessible via a URL to provide access to editors and reviewers. This allows research data to be included in the review process. The URL to access the dataset should be requested by the submission system so that it can be forwarded to editors and reviewers.
 
-### Encourage authors to publish datasets *under review* prior to article publication
+### Encourage authors to publish datasets _under review_ prior to article publication
 
 :::tip Standard
-*Journal author guidelines should require that datasets with status under review to be published prior to the publication of the associated article.*
+_Journal author guidelines should require that datasets with status under review to be published prior to the publication of the associated article._
 :::
 
-To assist in automated workflows, such as linking the datasets to the published article through their respective PIDs, **datasets *under review* should be published before the article is published**. Once a manuscript has been accepted, the authors should be informed to publish their dataset *under review*. This ensures that the data has a registered DOI when the article gets published. Consequently, journals can run quality control checks on the provided DOI such as validation. Publishers must explicitly communicate this process with authors through the author guidelines. In addition, other communication upon acceptance may also include this informaton. Contemporaneous, the DOI for the article should be provided so that authors can include this information in their dataset's metadata prior to the publication of the dataset. Finally, the article is published, and its DOI is registered.
+To assist in automated workflows, such as linking the datasets to the published article through their respective PIDs, **datasets _under review_ should be published before the article is published**. Once a manuscript has been accepted, the authors should be informed to publish their dataset _under review_. This ensures that the data has a registered DOI when the article gets published. Consequently, journals can run quality control checks on the provided DOI such as validation. Publishers must explicitly communicate this process with authors through the author guidelines. In addition, other communication upon acceptance may also include this informaton. Contemporaneous, the DOI for the article should be provided so that authors can include this information in their dataset's metadata prior to the publication of the dataset. Finally, the article is published, and its DOI is registered.
 
 ### Scholix.org
 
 :::tip Standard
-*Journals and publishers should use Scholix.org.*
+_Journals and publishers should use Scholix.org._
 :::
 
 [**Scholix**](https://doi.org/10.1045/january2017-burton) provides the framework for improving the links between scientific literature and research data as well as between data and data with the goal of providing a **high-level interoperability framework for exchanging information about these links**. Thus, Scholix hubs, such as [DataCite](https://datacite.org/) or [OpenAire](https://www.openaire.eu/), contribute information on their metadata records, which contain information on connected digital objects. This information should be used by academic publishers to discover datasets that correspond to an article but were published after the article was published, which allows the metadata of the article to be updated with links to the dataset (see above).
 
-----
+---
+
 Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661), [ORCID: 0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840)
