--- a/docs/60_topics/00_topics_guide.mdx
+++ b/docs/60_topics/00_topics_guide.mdx
@@ -4,9 +4,8 @@ slug: "/topics_guide"
 id: "topics_guide"
 ---
 
-
 :::info Info:
-The topics and concepts section offers topic-specific articles on very specific subjects in research data management and digitalization in chemistry This section is sub-divided into further categories for easy reference. 
+The topics and concepts section offers topic-specific articles on very specific subjects in research data management and digitalization in chemistry This section is sub-divided into further categories for easy reference.
 :::
 
 For data to be interoperable and reusable, [data formats standards](62_data_formats/00_format_standards.mdx) are of utmost importance. Development here is ongoing and we will continue to add information on formats.
@@ -15,15 +14,8 @@ In order to ensure that data are permanently referenced and cited, repositories 
 
 Annotating data with machine-readable [metadata](63_data_description_annotation/10_metadata.mdx) plays into nearly all aspects of FAIR and ensures data are understood by machines and humans alike. Here, the core concepts of [ontologies](/docs/ontology) in one's research domain proves helpful.
 
+## Topics in this Section
 
-<details>
-  <summary>Click to expand for all the Categories</summary>
-  
- <h3>Topics & Concepts</h3>
- 
-<a href="/docs/identifiers">Identifiers</a> <br />
-<a href="/docs/format_standards">Data Formats</a> <br />
-<a href="/docs/data_description_annotation">Data Description and Annotation</a> <br />
-
-
-</details>
+-   [Identifiers](/docs/identifiers)
+-   [Data Formats](/docs/format_standards)
+-   [Data Description and Annotation](/docs/data_description_annotation)
