--- a/docs/50_data_publication/30_licences.mdx
+++ b/docs/50_data_publication/30_licences.mdx
@@ -7,14 +7,14 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Licences
 
-Licences for research data often cause confusion among researchers. One of the main reasons for this is the interplay between **licences used for research data** and the requirements for referencing previous scientific work on which the current work is based, in accordance with the [Guidelines for Safeguarding Good Scientific Practice (DFG Code of Conduct)](https://wissenschaftliche-integritaet.de/en/code-of-conduct/). 
+Licences for research data often cause confusion among researchers. One of the main reasons for this is the interplay between **licences used for research data** and the requirements for referencing previous scientific work on which the current work is based, in accordance with the [Guidelines for Safeguarding Good Scientific Practice (DFG Code of Conduct)](https://wissenschaftliche-integritaet.de/en/code-of-conduct/).
 
 The DFG Code of Conduct requires researchers to cite original sources, i.e. to include original sources in reference sections. Providing a licence for research data is a way to provide permission to share and reuse the data.
 
-Work on dedicated licences for research data is ongoing. Until these licences are available, we recommend switching to [Creative Commons]((https://creativecommons.org/)) licences, which were developed to license creative works.
+Work on dedicated licences for research data is ongoing. Until these licences are available, we recommend switching to [Creative Commons](https://creativecommons.org/) licences, which were developed to license creative works.
 
 :::info Recommendation:
-NFDI4Chem recommends the use the least restrictive [Creative Commons](https://creativecommons.org/) licences such as [CC0](https://creativecommons.org/public-domain/cc0/) and [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/deed.en) 
+NFDI4Chem recommends the use the least restrictive [Creative Commons](https://creativecommons.org/) licences such as [CC0](https://creativecommons.org/public-domain/cc0/) and [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/deed.en)
 :::
 
 :::danger Notice:
@@ -27,10 +27,10 @@ Disclaimer: It should be checked on a case-by-case basis whether research data i
 
 In order to provide you with further helpful information, we have compiled a list of links:
 
-- [Heidi Seibold - Choosing an open license](https://heidiseibold.ck.page/posts/choosing-an-open-license)
-- [Forschungsdaten.info - Forschungsdaten Veröffentlichen](https://forschungsdaten.info/themen/rechte-und-pflichten/forschungsdaten-veroeffentlichen/) (in German)
-- [Forschungsdaten.info - Urheberrecht](https://forschungsdaten.info/themen/rechte-und-pflichten/urheberrecht/) (in German)
-- [Creative Commons - About CC Licenses](https://creativecommons.org/share-your-work/cclicenses/) 
-- [Creative Commons - License Chooser](https://creativecommons.org/choose/)
-- [Forschungsdaten in den Naturwissenschaften: Eine urheberrechtliche Bestandsaufnahme mit ihren Implikationen für universitäres FDM](https://doi.org/10.11588/heibooks.979.c13728) (in German)
-- [Open Knowledge Foundation - Open Data Commons](https://opendatacommons.org/licenses/odbl/)
+-   [Heidi Seibold - Choosing an open license](https://heidiseibold.ck.page/posts/choosing-an-open-license)
+-   [Forschungsdaten.info - Forschungsdaten Veröffentlichen](https://forschungsdaten.info/themen/rechte-und-pflichten/forschungsdaten-veroeffentlichen/) (in German)
+-   [Forschungsdaten.info - Urheberrecht](https://forschungsdaten.info/themen/rechte-und-pflichten/urheberrecht/) (in German)
+-   [Creative Commons - About CC Licenses](https://creativecommons.org/share-your-work/cclicenses/)
+-   [Creative Commons - License Chooser](https://creativecommons.org/choose/)
+-   [Forschungsdaten in den Naturwissenschaften: Eine urheberrechtliche Bestandsaufnahme mit ihren Implikationen für universitäres FDM](https://doi.org/10.11588/heibooks.979.c13728) (in German)
+-   [Open Knowledge Foundation - Open Data Commons](https://opendatacommons.org/licenses/odbl/)
