--- a/docs/10_domains/30_polymer_chemistry_new.mdx
+++ b/docs/10_domains/30_polymer_chemistry_new.mdx
@@ -6,7 +6,7 @@ slug: "/polymer_chemistry"
 
 import Methods from '@site/src/components/Methods.js';
 
-:::Introduction:
+## Introduction
 
 Polymer chemistry is focused on the synthesis and characterization of monomer units, macromolecules and resultant materials for applications in e.g. optics, electronics and energy, packaging and containers, coatings and adhesives, catalysis or medicine. Polymeric materials can be subdivided by their origin into synthetic, inorganic and biopolymers, where the latter is a significant subject of recent research as they can be derived from renewable resources and therefore are deemed to be part of the solution for a sustainable future. 
 The toolbox for monomer synthesis and modification, their polymerization as well as post-functionalization are often translated form organic chemistry, yet for cutting-edge materials new experimental strategies have to be developed. Many characterization methods, especially for monomers or small polymers, can also be adapted from established organic chemistry. However, since macromolecules can feature highly complex structures, e.g. brushes, dendrimers, rings and star shapes, advanced methods such as (2D) SEC, LCCC, DOSY NMR, or electron microscopy need to be applied in order to obtain an exhaustive structure determination (for abbreviations see table below). For their subsequent application as high-tech material, their mechanical and physical properties play an important role as well, where cyclic voltammetry or rheological characterization are just a few examples for the vast array of techniques that are available. A standard approach for the development of new polymeric materials can be described as follows:
@@ -18,7 +18,7 @@ The toolbox for monomer synthesis and modification, their polymerization as well
 - Post-polymerization functionalization.
 - Synthesis of macroscopic materials through 3D printing, moulding etc.
 
-:::Data Types:
+## Data Types:
 
 In order to collect comprehensive analytical data to characterize the synthesized materials the following steps can be taken:
 
@@ -28,7 +28,9 @@ In order to collect comprehensive analytical data to characterize the synthesize
 - When necessary, pre-processing of digital data with software of analytical device before data are transferred to the Chemotion-ELN.
 - Raw data files in proprietary file formats should be saved alongside interoperable open file formats by using converters or the software of the analytical device. If no specific open format is currently available, exporting as .txt or .csv is recommended. Please be aware that metadata included in the header of .txt or .csv files may not follow a defined (open) format and metadata should be additionally also added into the ELN.
 
-:::
+## ELN
+
+<ElnFinder subDisc="Synthetic chemistry" />
 
 
 ## Documentation and publication of research data
