--- a/docs/10_domains/30_polymer_chemistry_new.mdx
+++ b/docs/10_domains/30_polymer_chemistry_new.mdx
@@ -14,7 +14,7 @@ import ElnFinder from "@site/src/components/eln/ElnFinder.js";
 
 The toolbox for monomer synthesis and modification, their polymerization as well as post-functionalization are often translated form organic chemistry, yet for cutting-edge materials new experimental strategies have to be developed. Many characterization methods, especially for monomers or small polymers, can also be adapted from established organic chemistry. However, since macromolecules can feature highly complex structures, e.g. brushes, dendrimers, rings and star shapes, advanced methods such as (2D) SEC, LCCC, DOSY NMR, or electron microscopy need to be applied in order to obtain an exhaustive structure determination (for abbreviations see table below). For their subsequent application as high-tech material, their mechanical and physical properties play an important role as well, where cyclic voltammetry or rheological characterization are just a few examples for the vast array of techniques that are available. 
 
-## Data Types:
+## Data Types
 
 Data can be collected during the experiment through online methods, drawing samples on a specific schedule, or after the experiment by analyzing the obtained product. This leads to manually determined data: Experimental observations such as colour change or precipitants, appearance, yield and consistency of the product, solubility etc.
 
