Reword operando section

--- a/docs/10_domains/60_electrochemistry.mdx
+++ b/docs/10_domains/60_electrochemistry.mdx
@@ -20,10 +20,10 @@ Conceptually, the main data type in electrochemistry consists of time series dat
 and current (current density), including the measurement time.
 For AC methods also the frequency, the impedance and the phase angle are relevant.
 These data are most simply stored as CSV, but are often only available in non-standard file formats.
-Often additional techniques are employed *operando* to gain additional insight into the measured charge transfer
-and other (chemical) processes at the electrodes and the electrolyte,
-such as IR-spectroscopy, mass spectrometry or diffraction methods,
-which are stored along with the values from the electrochemical measurements.
+Often additional techniques are employed *operando* to gain more detailed insights into the origin of the measured charge transfer
+processes and other non-measurable (chemical) processes occurring concomitantly at the electrodes, in the electrolyte, or the interfaces,
+such as IR-spectroscopy, mass spectrometry or diffraction methods.
+This data is often stored along with the values from the electrochemical measurements.
 
 Additionally, imaging data can be obtained from purely electrochemical techniques such as scanning electrochemical microscopy (SECM) or indirectly,
 when combined with other methods such as *in situ* electrochemical scanning tunneling microscopy (*in situ* STM).
