Add links to navbar domain page

--- a/docs/10_domains/60_electrochemistry.mdx
+++ b/docs/10_domains/60_electrochemistry.mdx
@@ -35,7 +35,7 @@ For effective data management, software tools should be selected in a uniform ma
 and streamline workflows. This involves establishing clear usage guidelines, including metadata templates drawn from minimum information standards for a given method, where available.
 These should be outlined in a [data management plan (DMP)](/docs/dmp) for each project. Many universities supply tools and templates for DMPs (see the [respective article](/docs/dmp) for more information).
 
-An [electronic lab notebooks (ELN)](/docs/eln) helps in the day-to-day planning and structured documentation of experiments,
+An [electronic lab notebook (ELN)](/docs/eln) helps in the day-to-day planning and structured documentation of experiments,
 while some also assist in data workflow management.
 For electrochemical data, ELNs must be flexible and customizable, to meet the requirements of the diverse research topics.
 As such, there exists to date no ELN that meets the requirements of electrochemistry alone and researchers are may choose an ELN that fits best their research scope.
