adjust license section

--- a/docs/50_data_publication/publishing_workflow.mdx
+++ b/docs/50_data_publication/publishing_workflow.mdx
@@ -44,43 +44,38 @@ If you are working with multiple datasets relevant to one article, consider usin
   
 - For individual reactions or specific analytical data within those collections, cite them separately with their respective DOIs in both text and reference sections.
 
-## 5. Ensure Findability and Interoperability
-
-By following these steps—using ORCID iDs and ROR identifiers, employing PIDs correctly, linking datasets appropriately, and utilizing Collection DOIs—you significantly enhance the findability and interoperability of your research data. This means others can easily access and build upon your findings!
-Absolutely! Here’s an additional section to include in the article about choosing a license for your research data:
-
-## 6. Choose a License for Your Data
+## 5. Choose a License for Your Data
 
 When publishing your research data, it's essential to choose an appropriate [license](/licences). A license outlines how others can use, share, and build upon your work. Here are some key points to consider when selecting a license:
 
 ### Why Licensing Matters
 
-Licensing is crucial because it sets the rules for how others can interact with your data. A clear license helps prevent misuse and ensures that you receive proper credit for your contributions.
+Licensing is crucial because it sets the rules for how others can interact with your data. A clear license helps prevent misuse and ensures that you receive proper credit for your contributions. Many repositories will offer a drop-down list of selectable licenses.
 
-### Common Types of Licenses
+### Creative Commons Licenses
 
-1. **Creative Commons Licenses**: These licenses are widely used for sharing research data and come in various forms:
-   - **CC BY**: Allows others to distribute, remix, adapt, and build upon your work, even commercially, as long as they credit you.
-   - **CC BY-SA**: Similar to CC BY but requires new creations to carry the same license.
-   - **CC BY-NC**: Allows others to use your work non-commercially while still requiring attribution.
+[Creative Commons licenses](hhttps://creativecommons.org/share-your-work/cclicenses/) are widely used for sharing research data and come in various forms:
+  - **[CC BY](https://creativecommons.org/licenses/by/4.0/)**: Allows others to distribute, remix, adapt, and build upon your work, even commercially, as long as they credit you.
+  - **[CC BY-SA](https://creativecommons.org/licenses/by-sa/4.0/)**: Similar to CC BY but requires new creations to carry the same license.
+  - **[CC BY-NC](https://creativecommons.org/licenses/by-nc/4.0/)**: Allows others to use your work non-commercially while still requiring attribution.
 
-2. **Open Data Commons Licenses**: Specifically designed for databases and datasets:
-   - **ODC Public Domain Dedication (PDDL)**: Places the dataset in the public domain, allowing anyone to use it without restrictions.
-   - **ODC Attribution License (ODC-By)**: Requires attribution but allows any type of use.
-
-3. **Institutional or Publisher-Specific Licenses**: Some institutions or publishers may have their own licensing requirements or recommendations. Be sure to check these guidelines before deciding on a license.
 
 ### How to Choose a License
 
-- **Consider Your Goals**: Think about how you want others to use your data. If you encourage widespread use and adaptation, opt for more permissive licenses like CC BY.
+- **Consider Your Goals**: Think about how you want others to use your data. If you encourage widespread use and adaptation, opt for more permissive licenses like [CC BY](https://creativecommons.org/licenses/by/4.0/).
   
 - **Understand Legal Implications**: Make sure you're comfortable with what rights you're granting by choosing a particular license.
 
-- **Seek Guidance if Needed**: If you're unsure which license is best suited for your data, consult with colleagues or check resources from organizations specializing in open science. 
+- **Seek Guidance if Needed**: If you're unsure which license is best suited for your data, consult with colleagues, contact your local open science or research data management offices, or contact [NFDI4Chem's helpdesk](https://www.nfdi4chem.de/helpdesk/). Creative Commons also provides a [license chooser](https://chooser-beta.creativecommons.org/) to help you here.
 
 ### Communicate Your License Clearly
 
-Once you've chosen a license, make sure it's clearly stated alongside your dataset when submitting it to repositories. This transparency will help users understand their rights and responsibilities regarding your work.
+Once you've chosen a license, make sure it's clearly stated alongside your dataset when submitting it to repositories. This transparency will help users understand their rights and responsibilities regarding your work. In many cases, this will be handled by the repository itself and you only have to select your chosen license. 
+
+## 6. Ensure Findability and Interoperability
+
+By following these steps—using ORCID iDs and ROR identifiers, employing PIDs correctly, linking datasets appropriately, utilizing Collection DOIs, and selecting a license—you significantly enhance the findability and interoperability of your research data, while communicating how other's may use your work. This means others can easily access and build upon your findings!
+Absolutely! Here’s an additional section to include in the article about choosing a license for your research data:
 
 ## Conclusion
 
