add upload data section

--- a/docs/50_data_publication/publishing_workflow.mdx
+++ b/docs/50_data_publication/publishing_workflow.mdx
@@ -3,14 +3,19 @@ title: "Publishung your Research Data"
 slug: "/authors_publishing_data
 ---
 
-
 {/* draft: supplement or replacement for author publishing standards */}
 
 # A Simple Guide to Publishing Your Research Data
 
 As a researcher in chemistry, sharing your data is crucial for advancing science and ensuring your work is accessible to others. This guide will walk you through the essential steps and considerations for publishing your research data effectively.
 
-## 1. Identify Yourself and Your Institution
+## 1. Upload your Data
+
+Once you've ensured your data is [well-organized](/data_organisation) and you have chosen appropiate [data formats](/format_standards), you can upload your files. Depending on the [repository you have chosen](/choose_repository), it may be easiest to directly upload your data when creating the dataset. For example, [RADAR4Chem](https://radar4chem.radar-service.eu/) will automatically extract all files from a zip file at this point and replicate the directory structure, while this is not the case if the data is uploaded at a later point in time and an empty dataset is created first.
+
+Including a plain-text README file within your dataset can give more human-readable contect to your dataset. You may also include additional metadata files if you feel the options offered by the repository are insufficient to give the full context to your dataset.
+
+## 2. Identify Yourself and Your Institution
 
 Before you publish, make sure to provide your [**ORCID iD**](https://info.orcid.org/researchers/)—a unique identifier that helps distinguish you from other researchers. Similarly to article submission systems, most research data repository provide fields for this information. To get your identifier, simply register yourself through [ORCID's registration site](https://orcid.org/register).
 
@@ -18,7 +23,7 @@ Additionally, use the [**ROR identifier** (Research Organization Registry)](http
 
 These identifiers help improve the visibility of your work.
 
-## 2. Use Persistent Identifiers (PIDs)
+## 3. Use Persistent Identifiers (PIDs)
 
 When you deposit your research data, it will be assigned a [**persistent identifier (PID)**](/pid), similarly to how your article is designed a DOI (Digital Object Identifier). Here’s how to use it:
 
@@ -26,7 +31,7 @@ When you deposit your research data, it will be assigned a [**persistent identif
   
 - **For Others’ Datasets:** If you reuse datasets published by other researchers, include their PIDs in your references instead of just citing their articles. This not only gives proper credit but also helps others locate those datasets easily.
 
-## 3. Link Your Datasets with Articles
+## 4. Link Your Datasets with Articles
 
 To enhance discoverability, link your datasets directly to their corresponding articles:
 
@@ -36,7 +41,7 @@ To enhance discoverability, link your datasets directly to their corresponding a
 
 Many repository will guide you here, offering dropdown menus to select the appropriate relation and identifier type.
 
-## 4. Utilize Collection DOIs
+## 5. Utilize Collection DOIs
 
 If you are working with multiple datasets relevant to one article, consider using a **Collection DOI** provided by repositories:
 
@@ -44,7 +49,7 @@ If you are working with multiple datasets relevant to one article, consider usin
   
 - For individual reactions or specific analytical data within those collections, cite them separately with their respective DOIs in both text and reference sections.
 
-## 5. Choose a License for Your Data
+## 6. Choose a License for Your Data
 
 When publishing your research data, it's essential to choose an appropriate [license](/licences). A license outlines how others can use, share, and build upon your work. Here are some key points to consider when selecting a license:
 
@@ -72,10 +77,11 @@ Licensing is crucial because it sets the rules for how others can interact with 
 
 Once you've chosen a license, make sure it's clearly stated alongside your dataset when submitting it to repositories. This transparency will help users understand their rights and responsibilities regarding your work. In many cases, this will be handled by the repository itself and you only have to select your chosen license. 
 
-## 6. Ensure Findability and Interoperability
+## 7. Ensure Findability and Interoperability
 
 By following these steps—using ORCID iDs and ROR identifiers, employing PIDs correctly, linking datasets appropriately, utilizing Collection DOIs, and selecting a license—you significantly enhance the findability and interoperability of your research data, while communicating how other's may use your work. This means others can easily access and build upon your findings!
 Absolutely! Here’s an additional section to include in the article about choosing a license for your research data:
+
 
 ## Conclusion
 
