add other required subsection headers

--- a/docs/50_data_publication/publishing_workflow.mdx
+++ b/docs/50_data_publication/publishing_workflow.mdx
@@ -82,6 +82,11 @@ Once you've chosen a license, make sure it's clearly stated alongside your datas
 By following these steps—using ORCID iDs and ROR identifiers, employing PIDs correctly, linking datasets appropriately, utilizing Collection DOIs, and selecting a license—you significantly enhance the findability and interoperability of your research data, while communicating how other's may use your work. This means others can easily access and build upon your findings!
 Absolutely! Here’s an additional section to include in the article about choosing a license for your research data:
 
+## When to Publish the Dataset
+
+### Include Dataset Review in Manuscript Review
+
+### Publish Data Prior to Manuscript Submission
 
 ## Conclusion
 
