add suggested text for when to publish dataset

--- a/docs/50_data_publication/publishing_workflow.mdx
+++ b/docs/50_data_publication/publishing_workflow.mdx
@@ -84,9 +84,25 @@ Absolutely! Here’s an additional section to include in the article about choos
 
 ## When to Publish the Dataset
 
-### Include Dataset Review in Manuscript Review
+Deciding when to publish your dataset is an important consideration that can impact both your research and its accessibility. Here are some key points to help you determine the best timing:
 
-### Publish Data Prior to Manuscript Submission
+### 1. Include Dataset Review in Manuscript Review
+
+If possible, consider publishing your dataset alongside your manuscript submission. This allows reviewers to assess both your findings and the underlying data simultaneously, enhancing transparency and reproducibility in your research. By sharing your data during this stage, you provide reviewers with a complete picture of your work, which may lead to more constructive feedback.
+
+### 2. Publish Data Prior to Manuscript Submission
+
+In some cases, it might be beneficial to publish your dataset before submitting your manuscript. This approach can establish a clear record of your data and its availability, allowing other researchers to reference or build upon it even before the formal publication of your article. Just ensure that you clearly indicate in your manuscript where readers can find the associated dataset.
+
+### 3. Consider Journal Policies
+
+Be aware of any specific policies from the journal you intend to submit to regarding data sharing and publication timelines. Some journals encourage or require authors to make their datasets publicly available prior to or at the time of article submission, while others may have different guidelines.
+
+### 4. Ensure Data Quality and Completeness
+
+Before publishing, make sure that your dataset is well-organized, complete, and adequately documented. Providing sufficient metadata will enhance discoverability and usability for other researchers who may want to access or cite your work.
+
+By carefully considering these factors when deciding on the timing for publishing your dataset, you can maximize its impact and facilitate collaboration within the scientific community.
 
 ## Conclusion
 
