add line on embargo

--- a/docs/50_data_publication/publishing_workflow.mdx
+++ b/docs/50_data_publication/publishing_workflow.mdx
@@ -102,6 +102,8 @@ In some cases, it might be beneficial to publish your dataset before submitting 
 
 This allwos you to provide a registered and functioning DOI for the dataset. Many repositories will allow you to alter the dataset metadata, thus [adding the article DOI](#4-link-your-datasets-with-articles) at a later point in time. 
 
+If you have placed an embargo on your published dataset, you must ensure that reviewers are given access to the full data. An embargo limits access to the data, while the metadata remains publicly accessible. 
+
 ### Consider Journal Policies
 
 Be aware of any specific policies from the journal you intend to submit to regarding data sharing and publication timelines. Some journals encourage or require authors to make their datasets publicly available prior to or at the time of article submission, while others may have different guidelines.
